# covid-research-search-engine

./: .gitignore  ArticleData.cpp  ArticleData.h  ArticleMetaData.cpp  ArticleMetaData.h  CMakeLists.txt  DSAvlNode.h  DSAvlTree.h  DSHashTable.h  DocumentParser.cpp  DocumentParser.h  IndexHandler.cpp  IndexHandler.h  IndexNodeData.cpp  IndexNodeData.h  MurmurHash3.cpp  QueryProcessor.cpp  QueryProcessor.h  QueryResultData.cpp  QueryResultData.h  SearchEngineUI.cpp  SearchEngineUI.h  TestDSAvlTree.cpp  TestDSHashTable.cpp  TestIndexHandler.cpp  TestIndexNodeData.cpp  TestQueryProcessor.cpp  catch.hpp  main.cpp  porter2_stemmer.cpp  porter2_stemmer.h  simdjson.cpp  simdjson.h
.github/workflows/: build.yaml
persistence/: author_index.json  keyword_index.json  stats.json
util/: hash.h  string_view.h
workflows/: build.yaml
